[package]
name = "api_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "*"
serde = { version = "1", features = ["derive"] }
csv = "1"
